--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,13 @@ jobs:
       - image: circleci/ruby:2.6.0-node-browsers
         environment:
           DB_HOST: 127.0.0.1
+          PGUSER: decollte-test
+          RAILS_ENV: test
       - image: circleci/postgres:9.6.9-alpine
+        environment:
+          POSTGRES_USER: decollte
+          POSTGRES_DB: decollete-test
+          POSTGRES_PASSWORD: ""
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
