--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,13 @@ jobs:
       # specify the version you desire here
       - image: circleci/ruby:2.6.0-node-browsers
         environment:
-          DB_HOST: 127.0.0.1
-          PGUSER: decollte-test
           RAILS_ENV: test
+          PGHOST: 127.0.0.1
+          PGUSER: decollte
       - image: circleci/postgres:9.6.9-alpine
         environment:
           POSTGRES_USER: decollte
-          POSTGRES_DB: decollete-test
-          POSTGRES_PASSWORD: ""
+          POSTGRES_PASSWORD: password
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
